# vision_project

./: CMakeLists.txt  build.sh
filter_process/include/: tutorial.h
filter_process/src/: edging.cpp  main.cpp  param.cpp  tutorial.cpp
image_reader/include/: param.h  tutorial.h
image_reader/src/: main.cpp  param.cpp  tutorial.cpp
include/: cam_reader.h  edging.h  histogram.h  image_binay.h  image_reader.h  image_writer.h  low_pass.h  morphology.h  param.h  segmentation.h  tutorial.h  video_reader.h
initial_release/: CMakeLists.txt
initial_release/include/: filter.h  image_reader.h  segmentation.h  smoothing.h  tutorial.h  video_reader.h  watershed_segmentation.h
initial_release/src/: cam_reader.cpp  histogram.cpp  image_binary.cpp  image_reader.cpp  main.cpp  param.cpp  tutorial.cpp  video_reader.cpp  watershed_segmentation.cpp
remote_camera/: CMakeLists.txt  camera_selection.yaml
remote_camera/include/: histogram.h  param.h  tutorial.h  video_reader.h
remote_camera/src/: param.cpp  tutorial.cpp  video_reader.cpp
segmentation/include/: morphology.h  tutorial.h
segmentation/src/: main.cpp  morphology.cpp  param.cpp  segmentation.cpp  smoothing.cpp  tutorial.cpp
src/: cam_reader.cpp  edging.cpp  histogram.cpp  image_binary.cpp  image_reader.cpp  image_writer.cpp  low_pass.cpp  main.cpp  morphology.cpp  param.cpp  segmentation.cpp  tutorial.cpp  video_reader.cpp
video_reader/: CMakeLists.txt  build.sh
video_reader/src/: cam_reader.cpp  main.cpp  param.cpp  tutorial.cpp  video_reader.cpp
video_writer/: CMakeLists.txt  camera_selection.yaml  params.yaml
video_writer/include/: cam_reader.h  image_writer.h  param.h  tutorial.h  video_reader.h  video_writer.h
video_writer/src/: image_reader.cpp  main.cpp  param.cpp  tutorial.cpp  video_reader.cpp  video_writer.cpp
